--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,14 +1,25 @@
+.inputWrapper {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+}
+
 /* ChatApp.css */
 .chat-app {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  padding: 20px;
+  position: relative;
+  /* height: 100%; */
+  /* padding: 20px; */
+  overflow: scroll;
 }
 
 .message-list {
   flex: 1;
-  overflow-y: auto;
+  overflow: scroll;
+  max-height: 100%;
+  /* position: absolute; */
+  bottom: 200px;
 }
 
 .message-item {
@@ -25,11 +36,35 @@
   justify-content: flex-start;
 }
 
+.message-item.receiver .message-content {
+  margin-left: 10px;
+  border-radius: 20px;
+  border-bottom-left-radius: 0px;
+  background-color: #2c2b2d;
+  color: #fff;
+  margin-right: 50px;
+}
+.message-item.sender .message-content {
+  margin-right: 10px;
+  border-radius: 20px;
+  border-bottom-right-radius: 0px;
+  background-color: #0b9565;
+  color: #fff;
+  margin-left: 50px;
+}
+
 .message-content {
   padding: 10px;
   border-radius: 8px;
   background-color: #e0e0e0;
   color: #000;
+  max-width: 500px;
+  text-align: justify;
+  padding: 20px;
+}
+
+.sender .message-content {
+  margin-left: 10px;
 }
 
 .talking-animation {
@@ -48,6 +83,17 @@
   opacity: 0.5;
 }
 
+.video-wrapper {
+  width: 70px;
+  height: 70px;
+  min-width: 70px;
+  min-height: 70px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-size: cover;
+  background-color: aquamarine;
+}
+
 @keyframes typing {
   0% {
     opacity: 0.5;
@@ -61,14 +107,18 @@
 }
 
 .input-area {
-  display: flex;
+  /* display: inline-flex; */
   align-items: center;
   padding: 10px;
   background-color: #f5f5f5;
+  bottom: 0px;
+  position: absolute;
+  width: 100%;
 }
 
 .input-area input {
   flex: 1;
+  width: 80%;
   padding: 5px;
 }
 
