--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
   background-color: #000;
-  /* height: 100%; */
+  height: 100vh;
   color: aliceblue;
   position: relative;
+  overflow: hidden;
+
 }
