--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,3 +1,12 @@
+.chatWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  /* height: 100vh; */
+  overflow: scroll;
+  width: 60%;
+}
+
 .inputWrapper {
   position: absolute;
   bottom: 0px;
@@ -8,10 +17,16 @@
 .chat-app {
   display: flex;
   flex-direction: column;
-  position: relative;
-  /* height: 100%; */
-  /* padding: 20px; */
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  height: 100%;
   overflow: scroll;
+  padding: 20px;
+}
+
+.message-list::-webkit-scrollbar {
+  display: none;
 }
 
 .message-list {
@@ -20,11 +35,16 @@
   max-height: 100%;
   /* position: absolute; */
   bottom: 200px;
+  width: 60%;
+  margin-top: 60px;
+
+  margin-bottom: 90px;
+  padding: 20px 0px;
 }
 
 .message-item {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   margin-bottom: 10px;
 }
 
@@ -43,6 +63,7 @@
   background-color: #2c2b2d;
   color: #fff;
   margin-right: 50px;
+  border: 1px solid #454145;
 }
 .message-item.sender .message-content {
   margin-right: 10px;
@@ -108,20 +129,57 @@
 
 .input-area {
   /* display: inline-flex; */
+  display: flex;
   align-items: center;
-  padding: 10px;
-  background-color: #f5f5f5;
+  justify-content: center;
+  padding: 10px 20px;
+  background-color: #2c2b2d;
   bottom: 0px;
   position: absolute;
   width: 100%;
+  max-width: 100%;
 }
 
 .input-area input {
-  flex: 1;
-  width: 80%;
-  padding: 5px;
+  padding: 15px;
+  background-color: #1f1e20;
+  border: 1px solid #454145;
+  color: #fff;
+  border-radius: 8px;
+  width: 70%;
 }
 
 .input-area button {
   margin-left: 10px;
+  border: none;
+  background-color: #0b9565;
+  color: white;
+  padding: 15px 25px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 420px) {
+  .message-list {
+    width: 100%;
+  }
+
+  .video-wrapper {
+    width: 45px;
+    height: 45px;
+    min-width: 45px;
+    min-height: 45px;
+    border-radius: 50%;
+    overflow: hidden;
+    background-size: cover;
+    background-color: aquamarine;
+  }
+  .input-area input {
+    padding: 15px;
+    background-color: #1f1e20;
+    border: 1px solid #454145;
+    color: #fff;
+    border-radius: 8px;
+    width: 60%;
+  }
 }
