--- a/src/Chat.css
+++ b/src/Chat.css
@@ -149,6 +149,10 @@
   width: 70%;
 }
 
+.input-area input:focus {
+  outline: none;
+}
+
 .input-area button {
   margin-left: 10px;
   border: none;
