--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
   text-align: center;
   background-color: #000;
-  height: 100vh;
+  /* height: 100vh; */
+  height: 100dvh;
   color: aliceblue;
   position: relative;
   overflow: hidden;
-
 }
