--- a/src/Chat.css
+++ b/src/Chat.css
@@ -22,7 +22,7 @@
   gap: 40px;
   height: 100%;
   overflow: scroll;
-  padding: 20px;
+  padding: 0px 20px;
 }
 
 .message-list::-webkit-scrollbar {
