--- a/src/Chat.css
+++ b/src/Chat.css
@@ -113,6 +113,7 @@
   overflow: hidden;
   background-size: cover;
   background-color: aquamarine;
+  pointer-events:none;
 }
 
 @keyframes typing {
