--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
   text-align: center;
-  background-color: #000;
+  background-color: #f0f8ff;
   /* height: 100vh; */
   height: 100dvh;
-  color: aliceblue;
+  color: #f0f8ff;
   position: relative;
   overflow: hidden;
 }
