--- a/src/Chat.css
+++ b/src/Chat.css
@@ -189,6 +189,8 @@
     height: 110px;
     min-width: 80px;
     min-height: 110px;
+    max-width: 80px;
+    max-height: 110px;
     border-radius: 10px;
     overflow: hidden;
     background-size: cover;
