--- a/src/Header.css
+++ b/src/Header.css
@@ -1,11 +1,61 @@
-.header{
-  position: fixed;
+.header {
+  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
   top: 0;
   height: 50px;
-  background-color: #2c2b2d;
   width: 100%;
-  box-shadow: 0 2px 0px rgba(255, 255, 255, 0.2);
+  background-color: #fff;
+  color: #000;
+  box-shadow: 0 1px 0px rgba(165, 165, 165, 0.225);
+}
+.header.line {
+  background-color: #8dabd8;
+  color: #000;
+  box-shadow: 0 1px 0px rgba(247, 247, 247, 0.225);
+}
+
+.header.twitter,
+.header.instagram {
+  background-color: #fff;
+  color: #000;
+  box-shadow: 0 1px 0px rgba(165, 165, 165, 0.225);
+}
+
+.header.messenger {
+  background: linear-gradient(#e6646453, #9198e54c);
+  color: #000;
+  box-shadow: 0 1px 0px rgba(165, 165, 165, 0.225);
+}
+
+.logo {
+  height: 25px;
+  width: 25px;
+}
+
+.logo svg {
+  width: inherit;
+  height: inherit;
+}
+
+/* .twitter,
+.instagram {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+} */
+
+/* .twitter {
+  background-color: #4598da;
+}
+
+.instagram {
+  background-color: #b675d6;
+} */
+
+.characterIcon {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
 }
