style: mobile styles updated

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .App {
   text-align: center;
   background-color: #ffffff;
+  display: flex;
   /* height: 100vh; */
   /* height: 100dvh; */
   color: #ffffff;
   position: relative;
-  overflow: hidden;
-  padding: 30px;
+  /* overflow: hidden; */
+  /* padding: 10px; */
 }
