--- a/src/CustomSelect.css
+++ b/src/CustomSelect.css
@@ -7,7 +7,7 @@
 
 .select-box {
   /* border: 1px solid #ccc; */
-  padding: 10px;
+  /* padding: 10px; */
   cursor: pointer;
   display: flex;
   align-items: center;
