--- a/src/Header.css
+++ b/src/Header.css
@@ -1,32 +1,34 @@
-.header {
+.headerT {
   position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 0;
+  gap: 20px;
+  top: 50%;
+  left: 70%;
   height: 50px;
-  width: 100%;
+  width: 150px;
   background-color: #fff;
   color: #000;
-  box-shadow: 0 1px 0px rgba(165, 165, 165, 0.225);
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
-.header.line {
+.headerT.line {
   background-color: #8dabd8;
   color: #000;
-  box-shadow: 0 1px 0px rgba(247, 247, 247, 0.225);
+  /* box-shadow: 0 1px 0px rgba(247, 247, 247, 0.225); */
 }
 
-.header.twitter,
-.header.instagram {
+.headerT.twitter,
+.headerT.instagram {
   background-color: #fff;
   color: #000;
-  box-shadow: 0 1px 0px rgba(165, 165, 165, 0.225);
+  /* box-shadow: 0 1px 0px rgba(165, 165, 165, 0.225); */
 }
 
-.header.messenger {
+.headerT.messenger {
   background: linear-gradient(#e6646453, #9198e54c);
   color: #000;
-  box-shadow: 0 1px 0px rgba(165, 165, 165, 0.225);
+  /* box-shadow: 0 1px 0px rgba(165, 165, 165, 0.225); */
 }
 
 .logo {
@@ -38,21 +40,6 @@
   width: inherit;
   height: inherit;
 }
-
-/* .twitter,
-.instagram {
-  height: 25px;
-  width: 25px;
-  border-radius: 50%;
-} */
-
-/* .twitter {
-  background-color: #4598da;
-}
-
-.instagram {
-  background-color: #b675d6;
-} */
 
 .characterIcon {
   height: 30px;
