--- a/src/styles/devices.css
+++ b/src/styles/devices.css
@@ -36,7 +36,7 @@
 .marvel-device.iphone-x {
   width: 375px;
   height: 92vh;
-  max-height: 812px;
+  /* max-height: 812px; */
   padding: 26px;
   background: #fdfdfd;
   -webkit-box-shadow: inset 0 0 11px 0 black;
