--- a/src/styles/devices.css
+++ b/src/styles/devices.css
@@ -36,12 +36,18 @@
 .marvel-device.iphone-x {
   width: 375px;
   height: 92vh;
-  /* max-height: 812px; */
+  max-height: 812px;
   padding: 26px;
   background: #fdfdfd;
   -webkit-box-shadow: inset 0 0 11px 0 black;
   box-shadow: inset 0 0 11px 0 black;
   border-radius: 66px;
+}
+
+@media screen and (max-width: 420px) {
+  .marvel-device.iphone-x {
+    height: 812px;
+  }
 }
 .marvel-device.iphone-x .overflow {
   width: 100%;
