--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   background-color: #ffffff;
   display: flex;
-  /* height: 100vh; */
+  height: 100vh;
   /* height: 100dvh; */
   color: #ffffff;
   position: relative;
