--- a/src/components/Iphone/Iphone.css
+++ b/src/components/Iphone/Iphone.css
@@ -2,6 +2,9 @@
   width: 100%;
   position: relative;
   top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media all and (max-width: 840px) {
